--- a/FrontEnd/HTML/home_page.html
+++ b/FrontEnd/HTML/home_page.html
@@ -47,7 +47,7 @@
     <aside>
       <h2>Explore London</h2>
       <p>
-        London is the capital and largest city of England city and the United
+        London is the capital and largest city of England  and the United
         Kingdom. It stands on the River Thames in south-east England, at the
         head of a 50-mile (80 km) estuary down to the North Sea, and has been
         a major settlement for two millennia. Visit famous landmarks like
